Fix spacing

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -95,7 +95,6 @@ a[href*="//"]:not([href*="elastisys."])::after {
 
   display: flex;
   flex-flow: column;
-  justify-content: space-between;
 }
 
 .columns.columns.columns li {
@@ -116,7 +115,13 @@ a[href*="//"]:not([href*="elastisys."])::after {
 
 .columns.columns.columns div dd {
   margin: 0;
-  padding: 10px;
+  padding: 12px;
+}
+
+.columns.columns.columns div dd.grow-me {
+  margin: 0;
+  padding: 12px;
+  flex-grow: 4;
 }
 
 @media (max-width: 960px) {
